[package]
name = "oauthcli"
version = "1.0.8"
authors = ["azyobuzin <azyobuzin@users.sourceforge.jp>"]
description = "Implementation of OAuth 1.0 (and Twitter's f*ckin' OAuth) Client"
documentation = "https://docs.rs/oauthcli/1.0.7/oauthcli/"
repository = "https://github.com/azyobuzin/rust-oauthcli"
readme = "README.md"
keywords = ["oauth"]
categories = ["authentication"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "azyobuzin/rust-oauthcli" }

[dependencies]
base64 = "0.6"
rand = "0.3"
ring = { version = ">=0.9, <0.12", default-features = false }
time = "0.1"
url = "1"
hyper = { version = "0.9", default-features = false, optional = true }

[workspace]
members = ["ringtest"]
